test: add vitest and update test cases

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#0ea5e9" />
     <meta name="description"
-      content="Modern Payments Management System - Professional fintech dashboard for managing users and payments" />
-    <title>PaymentPro - Modern Payments Management System</title>
+      content="FinFlow - Professional financial management system for managing users and payments with modern fintech dashboard" />
+    <title>FinFlow - Modern Financial Management System</title>
 
     <!-- Preload critical fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
